[package]
name = "komootgpx"
version = "0.2.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Get GPX files from Komoot"
repository = "https://github.com/cdown/komootgpx"
readme = "README.md"
keywords = ["gpx", "hiking", "komoot"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.21", features = ["derive"] }
geo-types = "0.7.14"
gpx = "0.10.0"
serde = "1.0.215"
serde_json = "1.0.133"
unescape = "0.1.0"
ureq = "2.10.1"
