[package]
name = "komootgpx"
version = "0.2.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Get GPX files from Komoot"
repository = "https://github.com/cdown/komootgpx"
readme = "README.md"
keywords = ["gpx", "hiking", "komoot"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
geo-types = "0.7.15"
gpx = "0.10.0"
serde = "1.0.217"
serde_json = "1.0.138"
unescape = "0.1.0"
ureq = "3.0.4"
